# robot-dog-safety-guard

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  config.py  inference.py  prompts.py  schemas.py  ui.py  yufeng_taxonomy.py
configs/: models.yaml
data/processed/: evaluation_dataset.jsonl  reference_pool.jsonl  sample_safety_cleaned.jsonl
data/review/: manual_review.jsonl
datasets/raw/: sample_guard_safety_binary_eval.jsonl  sample_input_safety_multiclass_eval.jsonl  sample_oos.jsonl  sample_safety.jsonl  sample_safety_binary_eval.jsonl
datasets/raw/XGuard-Train-Open-200K/: dataset_infos.json
datasets/raw/XGuard-Train-Open-200K/examples/: data_processing.py  prompt_template.txt
evaluation/: evaluator.py  metrics.py  multiclass_metrics.py
reports/: data_quality_report.md  dataset_audit.md  deduplication_report.md  evaluation_dataset_report.md  input_safety_multiclass_comparison.md
scripts/: audit_datasets.py  check_server.py  dataset_pipeline.py  deduplicate.py  download_model.py  evaluate.py  generate_guard_binary_dataset.py  generate_multiclass_dataset.py  generate_sample_dataset.py  normalize_datasets.py  start_dev.sh  start_vllm.sh  summarize_multiclass_results.py  validate_jsonl.py
tests/: test_dataset_loader.py  test_evaluate_cli.py  test_evaluator.py  test_metrics.py  test_model_config.py  test_multiclass_safety.py  test_output_parser.py  test_prompts.py  test_safety_dataset_pipeline.py  test_ui.py
